# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api
 definitions:
   gorm.DeletedAt:
     properties:
@@ -49,15 +48,8 @@ definitions:
       message:
         type: string
     type: object
-host: localhost:8080
 info:
-  contact:
-    email: hermann.h.hahn@gmail.com
-    name: Hermann Hahn
-    url: https://github.com/hermannhahn/go-api
-  description: This is a sample product store database api.
-  title: Simple Rest API
-  version: "1.0"
+  contact: {}
 paths:
   /api/products:
     get:
@@ -196,4 +188,13 @@ paths:
       summary: Search products by name, description, category or price
       tags:
       - /api/products
+produces:
+- application/json
+schemes:
+- http
+securityDefinitions:
+  my-api-key:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
